📱 Adaptive layout. Support of devices up to iPhone 5/SE.

--- a/src/components/HelpTypeItem/HelpTypeItem.module.scss
+++ b/src/components/HelpTypeItem/HelpTypeItem.module.scss
@@ -6,6 +6,7 @@ $activeColor: #9c5d9a;
 .helpTypeItem {
   cursor: pointer;
   transition: 0.25s all;
+  min-width: 240px;
 
   &:hover {
     transform: scale(1.025);
