--- a/src/components/PaymentCard/PaymentCard.module.scss
+++ b/src/components/PaymentCard/PaymentCard.module.scss
@@ -1,5 +1,5 @@
 .paymentCard {
-  width: 380px;
+  max-width: 380px;
   height: calc(168px + 1.25rem);
   background-color: #c5d5e6;
   border-radius: 1rem;
@@ -24,5 +24,21 @@
     &>div {
       width: 40%;
     }
+  }
+}
+.formControl{
+
+}
+@media (max-width: 575.98px) {
+  .paymentCard {
+    padding: 0.5rem 1rem 1rem;
+    height: auto;
+  }
+  .secondRow{
+    margin-top: 1rem;
+  }
+  .formControl{
+    padding: 0.375rem 0.25rem;
+    font-size: 10pt;
   }
 }
