--- a/src/custom.scss
+++ b/src/custom.scss
@@ -1,4 +1,5 @@
 @import "node_modules/bootstrap/scss/bootstrap";
+
 @font-face {
   font-family: 'Geometria';
   font-style: normal;
@@ -7,8 +8,9 @@
   src: url('./fonts/Geometria/Geometria.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
   url('./fonts/Geometria/Geometria.woff2') format('woff2'), /* Super Modern Browsers */
   url('./fonts/Geometria/Geometria.woff') format('woff'), /* Pretty Modern Browsers */
-  url('./fonts/Geometria/Geometria.ttf')  format('truetype'); /* Safari, Android, iOS */
+  url('./fonts/Geometria/Geometria.ttf') format('truetype'); /* Safari, Android, iOS */
 }
+
 @font-face {
   font-family: 'Geometria';
   font-style: normal;
@@ -17,8 +19,9 @@
   src: url('./fonts/Geometria/Geometria-Bold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
   url('./fonts/Geometria/Geometria-Bold.woff2') format('woff2'), /* Super Modern Browsers */
   url('./fonts/Geometria/Geometria-Bold.woff') format('woff'), /* Pretty Modern Browsers */
-  url('./fonts/Geometria/Geometria-Bold.ttf')  format('truetype'); /* Safari, Android, iOS */
+  url('./fonts/Geometria/Geometria-Bold.ttf') format('truetype'); /* Safari, Android, iOS */
 }
+
 @font-face {
   font-family: 'Geometria';
   font-style: normal;
@@ -27,61 +30,74 @@
   src: url('./fonts/Geometria/Geometria-ExtraBold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
   url('./fonts/Geometria/Geometria-ExtraBold.woff2') format('woff2'), /* Super Modern Browsers */
   url('./fonts/Geometria/Geometria-ExtraBold.woff') format('woff'), /* Pretty Modern Browsers */
-  url('./fonts/Geometria/Geometria-ExtraBold.ttf')  format('truetype'); /* Safari, Android, iOS */
+  url('./fonts/Geometria/Geometria-ExtraBold.ttf') format('truetype'); /* Safari, Android, iOS */
 }
+
 @font-face {
   font-family: 'Gilroy';
   font-style: normal;
   font-weight: 500;
-  src: url('./fonts/Gilroy/Gilroy-Light.otf')  format('opentype');
+  src: url('./fonts/Gilroy/Gilroy-Light.otf') format('opentype');
 }
+
 @font-face {
   font-family: 'Gilroy';
   font-style: normal;
   font-weight: 900;
-  src: url('./fonts/Gilroy/Gilroy-ExtraBold.otf')  format('opentype');
+  src: url('./fonts/Gilroy/Gilroy-ExtraBold.otf') format('opentype');
 }
-body{
+
+body {
   font-family: 'Geometria', sans-serif;
 }
-h1{
+
+h1 {
   font-size: 48pt;
   font-family: Geometria, sans-serif;
   font-weight: 900;
 }
-h1.dark{
+
+h1.dark {
   color: #363b5d;
 }
-.modal-wide{
+
+.modal-wide {
   max-width: none;
   margin: 6rem 2.5rem;
+  border-radius: 1rem;
+  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1);
 
-  .modal-content{
+  .modal-content {
     padding: 1.5rem 6rem;
   }
-  .modal-content{
+
+  .modal-content {
     border-radius: 1rem;
   }
-  .form-group{
+
+  .form-group {
     margin: 0.85rem 0;
   }
-  .form-label{
+
+  .form-label {
     font-family: Geometria, sans-serif;
     margin-bottom: 0;
     color: #939aa3;
     font-weight: 700;
     font-size: 10pt;
   }
-  .form-control{
+
+  .form-control {
     border: 0;
     background-color: #f3f7fa;
   }
-  .subHeader{
+
+  .subHeader {
     font-family: Gilroy, sans-serif;
   }
 }
 
-.btn-colorful{
+.btn-colorful {
   //background: rgb(229,54,86);
   background-image: linear-gradient(90deg, rgba(229, 54, 86, 1) 0%, rgba(140, 106, 174, 1) 100%);
   background-size: 102%;
@@ -92,11 +108,35 @@ h1.dark{
   font-size: 14pt;
   border-radius: 0.5rem;
 
-  &:hover{
+  &:hover {
     color: #fff;
-    box-shadow: 0 0 16px rgba(229,54,86,0.6);
+    box-shadow: 0 0 16px rgba(229, 54, 86, 0.6);
   }
-  &:focus{
-    box-shadow: 0 0 16px rgba(229,54,86,0.6);
+
+  &:focus {
+    box-shadow: 0 0 16px rgba(229, 54, 86, 0.6);
+  }
+}
+
+.modal-backdrop {
+  background-color: rgba(139, 160, 191, 0.9);
+}
+
+@media (max-width: 575.98px) {
+  .modal-wide {
+    margin: 4rem 1rem;
+
+    .modal-content {
+      padding: 1.5rem 1rem;
+    }
+  }
+  h1 {
+    font-size: 24pt;
+    font-family: Geometria, sans-serif;
+    font-weight: 900;
+    text-align: center;
+  }
+  .btn-colorful {
+    padding: 0.75rem 4rem;
   }
 }
