--- a/src/components/PaymentCard/PaymentCard.module.scss
+++ b/src/components/PaymentCard/PaymentCard.module.scss
@@ -1,6 +1,6 @@
 .paymentCard {
   max-width: 380px;
-  height: calc(168px + 1.25rem);
+  min-height: calc(168px + 1.25rem);
   background-color: #c5d5e6;
   border-radius: 1rem;
   padding: 1rem 1.5rem 1.5rem;
@@ -32,7 +32,7 @@
 @media (max-width: 575.98px) {
   .paymentCard {
     padding: 0.5rem 1rem 1rem;
-    height: auto;
+    min-height: auto;
   }
   .secondRow{
     margin-top: 1rem;
